--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "tsc && node dist/index.js",
     "app": "nodemon src/index.ts",
     "debug": "tsc: watch - tsconfig.json",
-    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts ."
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+    "zip": "zip -r satella.zip . -x node_modules/**\\* -x .git/**\\* -x .vscode/**\\* -x .idea/**\\* -x dist/**\\* -x .DS_Store -x .env"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "id128": "^1.6.6",
     "mongoose": "^8.16.5",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.1"
   },
   "devDependencies": {
@@ -30,6 +32,7 @@
     "@types/joi": "^17.2.3",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^18.11.15",
     "@types/node-fetch": "^2.6.2",
     "@types/validator": "^13.7.10",
