--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
   "name": "satella",
-  "version": "1.0.0",
-  "description": "Satella backend",
+  "version": "1.0.6",
+  "description": "Satella - A Bun backend for Net64 Platform",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "clean": "rimraf dist",
-    "start": "tsc && node dist/index.js",
-    "app": "nodemon src/index.ts",
-    "debug": "tsc: watch - tsconfig.json",
-    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+    "start": "bun ./index.ts",
+    "dev": "bun --watch run ./index.ts",
+    "deploy": "bun ./tools/build.ts && node ./tools/deploy.mjs",
+    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
     "zip": "zip -r satella.zip . -x node_modules/**\\* -x .git/**\\* -x .vscode/**\\* -x .idea/**\\* -x dist/**\\* -x .DS_Store -x .env",
     "upload": "npm run zip && scp satella.zip satella:satella-instance && rm satella.zip"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "helmet": "^8.0.0",
@@ -46,6 +43,6 @@
     "typescript": "^4.9.4"
   },
   "keywords": [],
-  "author": "",
+  "author": "@Net64",
   "license": "ISC"
 }
